duniverse/expect_test_helpers_core/test/test_type_errors.mlt
open! Base
open! Expect_test_helpers_core
module Empty = struct end

let () = print_and_check_stable_type [%here] ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type unit but an expression was expected of type
         (module Core.Stable_without_comparator with type t = 'a)
|}]

let () = print_and_check_stable_int63able_type [%here] ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type unit but an expression was expected of type
         (module Core.Stable_int63able with type t = 'a)
|}]

let () = print_and_check_container_sexps [%here] ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type unit but an expression was expected of type
         (module Expect_test_helpers_core.With_containers with type t = 'a)
|}]
